config coors headers